--- a/_config.yml
+++ b/_config.yml
@@ -68,11 +68,11 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : # true, false (default)
-search_full_content      : # true, false (default)
+search                   : true # true, false (default)
+search_full_content      : true # true, false (default)
 search_provider          : # lunr (default), algolia, google
 lunr:
-  search_within_pages    : # true, false (default)
+  search_within_pages    : true # true, false (default)
 algolia:
   application_id         : # YOUR_APPLICATION_ID
   index_name             : # YOUR_INDEX_NAME
@@ -303,6 +303,12 @@ compress_html:
   ignore:
     envs: development
 
+collections:
+  pages:
+    output: true
+  category:
+    output: true
+    permalink: /categories/:category/
 
 # Defaults
 defaults:
@@ -314,8 +320,8 @@ defaults:
       layout: single
       author_profile: true
       read_time: false
-      comments: # true
-      share: true
+      comments: false
+      share: false
       related: true
   # _pages
   - scope:
@@ -323,16 +329,3 @@ defaults:
       type: pages
     values:
       layout: single
-  # _events
-  - scope:
-      path: ""
-      type: events
-    values:
-      layout: single
-      author_profile: false
-      share: false
-
-collections:
-  events:
-    output: true
-    permalink: /:collection/:path/
