--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ words_per_minute         : 200
 enable_copy_code_button  : # true, false (default)
 copyright                : # "copyright" name, defaults to site.title
 copyright_url            : # "copyright" URL, defaults to site.url
+future                   : true # By default, Jekyll does not publish posts dated in the future. 
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
   disqus:
@@ -113,10 +114,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Treystr"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "<3"
-  location         : "Washington, DC"
+  name             : "Satoshi"
+  avatar           : /assets/img/authors/satoshi.png # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "Chancellor on the brink..."
+  location         : ""
   email            :
   links:
     - label: "Email"
@@ -159,6 +160,7 @@ footer:
 include:
   - .htaccess
   - _pages
+  - .well-known
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -225,15 +227,15 @@ timezone: America/New_York # https://en.wikipedia.org/wiki/List_of_tz_database_t
 
 
 # Pagination with jekyll-paginate
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
+#paginate: 5 # amount of posts to show
+#paginate_path: /page:num/
 
 # Pagination with jekyll-paginate-v2
 # See https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#site-configuration
 #   for configuration details
 pagination:
   # Set enabled to true to use paginate v2
-  # enabled: true
+  enabled: true
   debug: false
   collection: 'posts'
   per_page: 10
@@ -329,3 +331,9 @@ defaults:
       type: pages
     values:
       layout: single
+      entries_layout: none
+      related: false
+      comments: false
+      classes: wide
+      sidebar:
+        nav: events
