--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ breadcrumbs              : # true, false (default)
 words_per_minute         : 200
 enable_copy_code_button  : # true, false (default)
 copyright                : # "copyright" name, defaults to site.title
-copyright_url            : # "copyright" URL, defaults to site.url
+copyright_url            : /coin-selector # "copyright" URL, defaults to site.url
 future                   : true # By default, Jekyll does not publish posts dated in the future. 
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
@@ -142,7 +142,7 @@ author:
 # Site Footer
 footer:
   links:
-    - label: "Xitter"
+    - label: "Twitter"
       icon: "fab fa-fw fa-x-twitter"
       url: "https://x.com/BTCDistrict"
     - label: "Meetup"
@@ -227,7 +227,7 @@ timezone: America/New_York # https://en.wikipedia.org/wiki/List_of_tz_database_t
 
 
 # Pagination with jekyll-paginate
-#paginate: 5 # amount of posts to show
+paginate: 0 # amount of posts to show
 #paginate_path: /page:num/
 
 # Pagination with jekyll-paginate-v2
@@ -235,7 +235,7 @@ timezone: America/New_York # https://en.wikipedia.org/wiki/List_of_tz_database_t
 #   for configuration details
 pagination:
   # Set enabled to true to use paginate v2
-  enabled: true
+  enabled: false
   debug: false
   collection: 'posts'
   per_page: 10
@@ -320,20 +320,21 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: false
       comments: false
       share: false
       related: true
+      show_prev_next: false
   # _pages
   - scope:
       path: ""
       type: pages
     values:
       layout: single
-      entries_layout: none
       related: false
       comments: false
       classes: wide
+      show_prev_next: false
       sidebar:
         nav: events
