--- a/_config.yml
+++ b/_config.yml
@@ -97,6 +97,7 @@ facebook:
   app_id                 :
   publisher              :
 og_image                 : /assets/og/bd-og.jpg # Open Graph/Twitter default site image
+twitter_image            : /assets/og/bd-og.jpg # Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
