--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ logo                     : "/assets/img/logos/bd.png" # path of logo image to di
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : # true, false (default)
 words_per_minute         : 200
-enable_copy_code_button  : # true, false (default)
+enable_copy_code_button  : true # true, false (default)
 copyright                : # "copyright" name, defaults to site.title
 copyright_url            : /coin-selector # "copyright" URL, defaults to site.url
 future                   : true # By default, Jekyll does not publish posts dated in the future. 
@@ -91,7 +91,8 @@ baidu_site_verification  :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : "BTCDistrict"
+  card                   : "summary_large_image"
 facebook:
   username               :
   app_id                 :
