--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -9,7 +9,7 @@ Compass Coffee (1703 H St NW):
       detail: "🔴 Farragut North Metro + 5 min walk"
     - label: "Street Parking"
       detail: "Street parking is available in front of the café on H St."
-  note: This event may start after the cafe closes! Compass is kind enough to open its doors to our community after hours 🧡
+  note:    Be sure to check out the special <a href="https://www.compasscoffee.com/products/bitcoin-blend">Bitcoin Blend</a>, an El Salvador single-origin roast from our host Compass Coffee. You can order from their website and you can even pay in Bitcoin!
 
 Strategy HQ:
   name        : "Strategy HQ"
