--- a/_data/bookclub.yml
+++ b/_data/bookclub.yml
@@ -101,3 +101,11 @@
   author: Edward Chancellor
   link: https://a.co/d/fE8WYMV
   date: null
+- title: Why Bitcoin?
+  author: Tomer Strolight
+  link: https://whybitcoinbook.com/
+  date: null
+- title: Superagency: What Could Possibly Go Right with Our AI Future?
+  author: Reid Hoffman & Greg Beato
+  link: https://a.co/d/hnxqV0u
+  date: null
