update venue parking for gwu

--- a/_data/bookclub.yml
+++ b/_data/bookclub.yml
@@ -105,7 +105,7 @@
   author: Tomer Strolight
   link: https://whybitcoinbook.com/
   date: null
-- title: Superagency: What Could Possibly Go Right with Our AI Future?
+- title: "Superagency: What Could Possibly Go Right with Our AI Future?"
   author: Reid Hoffman & Greg Beato
   link: https://a.co/d/hnxqV0u
   date: null
