--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -51,7 +51,7 @@ George Washington University (Ames Hall B101):
         <ul>
             <li> GWU Mount Vernon Parking Lot is underneath the outdoor tennis courts.</li>
             <li> Turn onto Whitehaven Pkwy NW and into the GWU campus entrance next to the tennis courts. Turn left into the garage underneath the tennis courts.</li>
-            <li> Up to 3hrs is free and the garage closes at 11PM.</li>
+            <li> Weekday evenings after 5PM is $7</li>
             <li> Ames hall is across the street from the garage.</li>
         </ul>
     - label: "🚇 Public Transportation"
