--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -49,8 +49,8 @@ George Washington University (Ames Hall B101):
     - label: "🚗 Garage Parking"
       detail: > 
         <ul>
-            <li> GWU Mount Vernon Parking Lot is underneath the outdoor tennis courts.</li>
-            <li> Turn onto Whitehaven Pkwy NW and into the GWU campus entrance next to the tennis courts. Turn left into the garage underneath the tennis courts.</li>
+            <li> The GWU Parking Garage is underneath the outdoor tennis courts.</li>
+            <li> Turn onto Whitehaven Pkwy NW and into the GW campus entrance. Turn left into the garage underneath the tennis courts.</li>
             <li> Weekday evenings after 5PM is $7</li>
             <li> Ames hall is across the street from the garage.</li>
         </ul>
