--- a/_data/bookclub.yml
+++ b/_data/bookclub.yml
@@ -109,7 +109,7 @@
   author: Reid Hoffman & Greg Beato
   link: https://a.co/d/hnxqV0u
   date: null
-- title: "Free Private Cities: Making Governments Compete For You""
+- title: "Free Private Cities: Making Governments Compete For You"
   author: Titus Gebel
   link: https://a.co/d/90PgAG1
   date: null
