--- a/_data/bookclub.yml
+++ b/_data/bookclub.yml
@@ -1,7 +1,7 @@
 - title: When Money Dies
   author: Adam Fergusson
   link: https://a.co/d/b9ItA14
-  date: null
+  date: 2025-04-16
 - title: The Genesis Book
   author: Aaron van Wirdum
   link: https://thegenesisbook.com
