--- a/_data/bookclub.yml
+++ b/_data/bookclub.yml
@@ -113,3 +113,7 @@
   author: Titus Gebel
   link: https://a.co/d/90PgAG1
   date: null
+- title: "Bitcoin Age"
+  author: Nik Bhatia
+  link: https://thebitcoinlayer.com/bitcoinage
+  date: null
