--- a/_data/bookclub.yml
+++ b/_data/bookclub.yml
@@ -117,3 +117,15 @@
   author: Nik Bhatia
   link: https://thebitcoinlayer.com/bitcoinage
   date: null
+- title: "The Satoshi Papers"
+  author: Natalie Smolenski
+  link: https://store.bitcoinmagazine.com/pages/the-satoshi-papers
+  date: null
+- title: "The Big Print"
+  author: Lawrence Lepard
+  link: https://a.co/d/3RLY4UX
+  date: null
+- title: "Price of Tomorrow"
+  author: Jeff Booth
+  link: https://a.co/d/4qW589F
+  date: null
