--- a/_data/bookclub.yml
+++ b/_data/bookclub.yml
@@ -129,3 +129,7 @@
   author: Jeff Booth
   link: https://a.co/d/4qW589F
   date: null
+- title: "The Deficit Myth"
+  author: Stephanie Kelton
+  link: https://a.co/d/89rsms4
+  date: null
