--- a/_data/bookclub.yml
+++ b/_data/bookclub.yml
@@ -9,7 +9,7 @@
 - title: "Salt: A World History"
   author: Mark Kurlansky
   link: https://www.barnesandnoble.com/w/salt-mark-kurlansky/1102487050
-  date: null
+  date: 2025-07-30
 - title: '24'
   author: Avi Burra
   link: https://a.co/d/5Qk9f18
@@ -29,7 +29,6 @@
 - title: The Creature from Jekyll Island
   author: G. Edward Griffin
   link: https://a.co/d/fBffbNj
-  date: null
   date: 2025-01-22
 - title: Softwar
   author: Jason Lowery
@@ -46,7 +45,6 @@
 - title: Hidden Repression
   author: Alex Gladstein
   link: https://a.co/d/at5LKyX
-  date: null
   date: 2025-03-19
 - title: Bitcoin is Venice
   author: Allen Farrington and Sacha Meyers
@@ -55,7 +53,6 @@
 - title: Abundance Through Scarcity
   author: Loni Appelberg
   link: https://amzn.to/3BDs4EM
-  date: null
   date: 2025-02-26
 - title: The 7th Property
   author: Erik Yakes
@@ -64,12 +61,10 @@
 - title: The Sovereign Individual
   author: James Dale Davidson & Lord William Rees-Mogg
   link: https://a.co/d/hhqdL5Q
-  date: null
   date: 2024-10-23
 - title: The Blocksize War
   author: Jonathan Bier
   link: https://a.co/d/9mCLrOf
-  date: null
   date: 2024-07-09
 - title: Resistance Money
   author: Andrew M. Bailey, Bradley Rettler, Craig Warmke
@@ -78,12 +73,10 @@
 - title: The Ethics of Money Production
   author: Jörg Guido Hülsmann
   link: https://mises.org/library/book/ethics-money-production
-  date: null
   date: 2024-11-20
 - title: Paper Soldiers
   author: Saleha Mohsin
   link: https://tinyurl.com/SalehaDollar
-  date: null
   date: 2024-09-24
 - title: The Bushido of Bitcoin
   author: Aleksandar Svetski
@@ -116,7 +109,7 @@
 - title: "Bitcoin Age"
   author: Nik Bhatia
   link: https://thebitcoinlayer.com/bitcoinage
-  date: null
+  date: 2025-06-02
 - title: "The Satoshi Papers"
   author: Natalie Smolenski
   link: https://store.bitcoinmagazine.com/pages/the-satoshi-papers
@@ -124,7 +117,7 @@
 - title: "The Big Print"
   author: Lawrence Lepard
   link: https://a.co/d/3RLY4UX
-  date: null
+  date: 2025-06-17
 - title: "Price of Tomorrow"
   author: Jeff Booth
   link: https://a.co/d/4qW589F
